Edit variable names
Some variables have been changed to more appropriate names.

--- a/conversor.ipynb
+++ b/conversor.ipynb
@@ -134,11 +134,11 @@
     "            print(\"El número indicado no es un hexadecimal.\")\n",
     "            return None      \n",
     "            \n",
-    "    for index, digito in enumerate(str(numero)):\n",
-    "        posicion = int(largo) - index\n",
-    "        PONER_NOMBRE = int(tabla[digito.upper()]) * int(base)**int(posicion-1)\n",
+    "    for indice, digito in enumerate(str(numero)):\n",
+    "        posicion = int(largo) - indice\n",
+    "        valor = int(tabla[digito.upper()]) * int(base)**int(posicion-1)\n",
     "        \n",
-    "        resultado = resultado + PONER_NOMBRE\n",
+    "        resultado = resultado + valor\n",
     "        \n",
     "    return resultado"
    ]
@@ -434,17 +434,17 @@
    "outputs": [],
    "source": [
     "def octal_to_hex(numero):\n",
-    "    bin_number = octal_to_bin(numero)\n",
+    "    bin_numero = octal_to_bin(numero)\n",
     "\n",
-    "    if bin_number is None:\n",
+    "    if bin_numero is None:\n",
     "        return None\n",
     "    \n",
-    "    hex_number = binary_to_hex(bin_number)\n",
+    "    hex_numero = binary_to_hex(bin_numero)\n",
     "    \n",
-    "    if hex_number.startswith(\"0\"):\n",
-    "        hex_number = hex_number[1:]\n",
+    "    if hex_numero.startswith(\"0\"):\n",
+    "        hex_numero = hex_numero[1:]\n",
     "\n",
-    "    return hex_number"
+    "    return hex_numero"
    ]
   },
   {
@@ -539,17 +539,17 @@
    "outputs": [],
    "source": [
     "def hex_to_octal(numero):\n",
-    "    bin_number = hex_to_bin(numero)\n",
+    "    bin_numero = hex_to_bin(numero)\n",
     "\n",
-    "    if bin_number is None:\n",
+    "    if bin_numero is None:\n",
     "        return None\n",
     "    \n",
-    "    octal_number = binary_to_octal(bin_number)\n",
+    "    octal_numero = binary_to_octal(bin_numero)\n",
     "\n",
-    "    if octal_number.startswith(\"0\"):\n",
-    "        octal_number = octal_number[1:]\n",
+    "    if octal_numero.startswith(\"0\"):\n",
+    "        octal_numero = octal_numero[1:]\n",
     "\n",
-    "    return octal_number"
+    "    return octal_numero"
    ]
   },
   {
